--- a/Project/index.html
+++ b/Project/index.html
@@ -6,7 +6,7 @@
     <meta property="og:url" content="winteresy.github.io">
     <meta property="og:title" content="Wikimedium">
     <meta property="og:description" content="Учебный проект по HTML/CSS">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://winteresy.github.io/Wikimedium/">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
     <link rel="icon" type="image/png" href="images/favicon.png"/>
     <meta charset="utf-8">
